@@ -1,3 +1,8 @@
+2011-06-24  Mike Frysinger  <vapier@gentoo.org>
+
+  * acinclude.m4: Add a new AS_VAR_PREPEND helper.
+  * configure.ac: Use AS_VAR_PREPEND rather than touching the var directly.
+
 2011-06-23  Mike Frysinger  <vapier@gentoo.org>
 
   * src/cmd/Makefile.am: Tweak dependencies so things work from a fresh
